[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rep-tiles"
version = "0.1.0"
description = "Educational sandbox for discovering rep-tiles."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "shapely>=2.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["rep_tiles*"]

[tool.setuptools.package-data]
rep_tiles = ["static/*"]
